--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ git+https://github.com/sunfounder/robot-hat.git@v2.0
 git+https://github.com/sunfounder/picar-x.git@v2.0
 git+https://github.com/sunfounder/vilib.git@picamera2
 ultralytics
+gpiozero
+smbus2
+pyaudio
