--- a/runs/detect/yolov8n-picar/args.yaml
+++ b/runs/detect/yolov8n-picar/args.yaml
@@ -1,8 +1,8 @@
 task: detect
 mode: train
 model: yolov8n.pt
-data: ./vision/yolo_dataset/data.yaml
-epochs: 100
+data: picar-library/models/yolo_dataset/data.yaml
+epochs: 20
 time: null
 patience: 100
 batch: 5
